web/uploads/60232d45/k8s/services.yaml
# =============================================================================
# BankSecure — Services Kubernetes
# Fichier : data/input/k8s/services.yaml
# NodePort  = exposé vers l'extérieur → arête PEUT_ATTAQUER dans G0
# ClusterIP = interne uniquement → arête DEPENDS_ON dans G0
# =============================================================================

apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: default
spec:
  type: NodePort
  selector:
    app: api-gateway
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080

---
apiVersion: v1
kind: Service
metadata:
  name: admin-dashboard
  namespace: default
spec:
  type: NodePort
  selector:
    app: admin-dashboard
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30880

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: account-service
  ports:
  - port: 5000
    targetPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: transaction-service
  ports:
  - port: 8080
    targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
  - port: 5001
    targetPort: 5001

---
apiVersion: v1
kind: Service
metadata:
  name: fraud-detection
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: fraud-detection
  ports:
  - port: 5002
    targetPort: 5002

---
apiVersion: v1
kind: Service
metadata:
  name: user-db
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: user-db
  ports:
  - port: 5432
    targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: account-db
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: account-db
  ports:
  - port: 5432
    targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: transaction-db
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: transaction-db
  ports:
  - port: 27017
    targetPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: redis-cache
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: redis-cache
  ports:
  - port: 6379
    targetPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: message-broker
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: message-broker
  ports:
  - name: amqp
    port: 5672
    targetPort: 5672
  - name: management
    port: 15672
    targetPort: 15672
